# purpleair-local

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  TODO.md  docker-compose.yml  hacs.json  pyproject.toml  requirements_test.txt
.dev/: configuration.yaml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml  validate.yml
custom_components/purpleair_local/: __init__.py  api.py  aqi.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  sensor.py  strings.json
custom_components/purpleair_local/translations/: en.json
tests/: conftest.py  test_api.py  test_aqi.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_models.py  test_options_flow.py  test_sensor.py  test_translations.py
tests/fixtures/: README.md  pa2_indoor_single_laser.json  pa2_outdoor_dual_laser.json
