[project]
name = "purpleair-local"
version = "0.0.1"
description = "Home Assistant custom integration for local PurpleAir sensor polling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    # Brings in homeassistant core plus its standard test fixtures
    # (hass, enable_custom_integrations, etc.). Heavy install (~600 MB
    # of deps) but unavoidable for integration-level tests.
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
